<resources>
    <string name="app_name">MovieDekho</string>
    <string name="movies_most_popular">Movies | Most Popular</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="u2022">•</string>
    <string name="website">Website</string>
    <string name="episodes">Episodes</string>
    <string name="watchlist">WatchList</string>
    <string name="search">Search TV Show</string>
    <string name="share">Share</string>
</resources>