<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isLoading"
            type="Boolean" />
        <variable
            name="tvShowImageURL"
            type="String" />
        <variable
            name="tvShowName"
            type="String" />
        <variable
            name="networkCountry"
            type="String" />
        <variable
            name="startedDate"
            type="String" />
        <variable
            name="status"
            type="String" />
        <variable
            name="description"
            type="String" />
        <variable
            name="rating"
            type="String" />
        <variable
            name="genre"
            type="String" />
        <variable
            name="runtime"
            type="String" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        tools:context=".activities.TVShowDetailsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/sliderViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:id="@+id/viewFadingEdge"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/background_fading_edge"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/sliderViewPager"/>

                <LinearLayout
                    android:id="@+id/layoutSliderIndicators"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal"
                    android:padding="8.00dp"
                    app:layout_constraintStart_toEndOf="@id/imageTVShow"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/viewFadingEdge"/>

                <ImageView
                    android:id="@+id/imageBackButton"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/background_back_button"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorTextIcons" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageTVShow"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    android:imageURL="@{tvShowImageURL}"
                    app:layout_constraintBottom_toBottomOf="@id/sliderViewPager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sliderViewPager"
                    app:riv_corner_radius="@dimen/_6sdp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{tvShowName}"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/colorTextIcons"
                    android:visibility="gone"
                    android:id="@+id/textName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageTVShow"
                    app:layout_constraintTop_toBottomOf="@id/sliderViewPager"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{networkCountry}"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/colorTextOther"
                    android:visibility="gone"
                    android:id="@+id/textNetworkCountry"
                    app:layout_constraintEnd_toEndOf="@id/textName"
                    app:layout_constraintStart_toStartOf="@id/textName"
                    app:layout_constraintTop_toBottomOf="@id/textName"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{status}"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@android:color/holo_green_light"
                    android:visibility="gone"
                    android:id="@+id/textStatus"
                    app:layout_constraintEnd_toEndOf="@id/textName"
                    app:layout_constraintStart_toStartOf="@id/textName"
                    app:layout_constraintTop_toBottomOf="@id/textNetworkCountry"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text='@{"Started on: " + startedDate}'
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/colorTextSecondary"
                    android:visibility="gone"
                    android:id="@+id/textStarted"
                    app:layout_constraintEnd_toEndOf="@id/textName"
                    app:layout_constraintStart_toStartOf="@id/textName"
                    app:layout_constraintTop_toBottomOf="@id/textStatus"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:maxLines="4"
                    android:text="@{description}"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/colorTextIcons"
                    android:visibility="gone"
                    android:id="@+id/textDescription"
                    app:layout_constraintTop_toBottomOf="@id/imageTVShow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/read_more"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone"
                    android:id="@+id/textReadMore"
                    app:layout_constraintTop_toBottomOf="@id/textDescription"
                    app:layout_constraintStart_toStartOf="@id/textDescription"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/viewDivider1"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorTextSecondary"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/textReadMore"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutMisc"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider1">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_star"
                        app:tint="@color/colorTextOther"/>

                    <TextView
                        android:id="@+id/textRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{rating}"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/u2022"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:id="@+id/textGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{genre}"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/u2022"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:id="@+id/textRuntime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{runtime}"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp"/>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/viewDivider2"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorTextSecondary"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/layoutMisc"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:id="@+id/buttonWebsite"
                    android:visibility="gone"
                    android:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_6sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/website"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/buttonEpisodes"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider2"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:id="@+id/buttonEpisodes"
                    android:visibility="gone"
                    android:backgroundTint="@color/colorTextOther"
                    app:cornerRadius="@dimen/_6sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/share"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buttonWebsite"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider2"/>

                <ProgressBar
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:visibility="@{isLoading?View.VISIBLE:View.GONE, default=gone}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/imageWatchList"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/background_fab"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_watchlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/colorTextIcons"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>